<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/login_title_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/findpass_usercode"
            android:layout_width="@dimen/dp_318"
            android:layout_height="@dimen/dp_38"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:background="@drawable/textview_round_border"
            android:hint="@string/findpass_usercode"
            android:paddingLeft="@dimen/dp_22" />

        <EditText
            android:id="@+id/findpass_newpassword"
            android:layout_width="@dimen/dp_318"
            android:layout_height="@dimen/dp_38"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_76"
            android:background="@drawable/textview_round_border"
            android:hint="@string/findpass_newpassword"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_22" />

        <EditText
            android:id="@+id/findpass_againpassword"
            android:layout_width="@dimen/dp_318"
            android:layout_height="@dimen/dp_38"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_129"
            android:background="@drawable/textview_round_border"
            android:hint="@string/findpass_againpassword"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_22" />

        <EditText
            android:id="@+id/findpass_checkcode"
            android:layout_width="@dimen/dp_318"
            android:layout_height="@dimen/dp_38"
            android:layout_alignStart="@+id/findpass_usercode"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/dp_182"
            android:background="@drawable/textview_round_border"
            android:hint="@string/findpass_checkcode"
            android:paddingLeft="@dimen/dp_22" />

        <Button
            android:id="@+id/findpass_getcheckcode"
            android:layout_width="@dimen/dp_78"
            android:layout_height="@dimen/dp_28"
            android:layout_marginLeft="@dimen/dp_255"
            android:layout_marginTop="@dimen/dp_187"
            android:background="@mipmap/login_yellow"
            android:text="@string/findpass_getcheckcode"
            android:textColor="@color/red_light"
            android:textSize="@dimen/sp_12" />

        <Button
            android:id="@+id/findpass_submit"
            android:layout_width="@dimen/dp_318"
            android:layout_height="@dimen/dp_38"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_241"
            android:background="@mipmap/login_yellow"
            android:text="@string/findpass_submit"
            android:textColor="@color/red_light"
            android:textSize="@dimen/sp_15" />
    </RelativeLayout>
</LinearLayout>