<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/login_title_layout" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="@dimen/dp_316"
        android:layout_height="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_130"
        android:background="@drawable/textview_round_border"
        android:hint="@string/change_password_new_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dp_19"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_password_again"
        android:layout_width="@dimen/dp_316"
        android:layout_height="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@drawable/textview_round_border"
        android:hint="@string/register_againpassword"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dp_19"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password" />

    <Button
        android:id="@+id/login_load"
        android:layout_width="@dimen/dp_318"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_28"
        android:background="@mipmap/login_yellow"
        android:text="@string/findpass_submit"
        android:textColor="@color/red_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password_again" />

</android.support.constraint.ConstraintLayout>